# heartland-synthetic

./: .gitignore  .zenodo.json  CHANGELOG.md  README.md  pyproject.toml
site/: package-lock.json  package.json
site/app/: globals.css  layout.tsx  page.tsx
site/components/landing/: abstract.tsx  colophon.tsx  evidence.tsx  features.tsx  heart-mark.tsx  hero.tsx  install-command.tsx  install.tsx  masthead.tsx
src/heartland_synthetic/: __init__.py  _rng.py  clinical.py  comorbid.py  config.py  demographics.py  gdmt.py  generator.py  outcomes.py  registries.py  rural.py  scoring.py  timeseries.py
src/heartland_synthetic/exports/: __init__.py  fhir.py  redcap.py
tests/: conftest.py  test_distributions.py  test_exports.py  test_gdmt.py  test_outcomes.py  test_reproducibility.py  test_rural.py  test_scoring.py  test_timeseries.py
tests/fixtures/: hand_computed_cases.json
