[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heartland-synthetic"
version = "0.2.0"
description = "Synthetic heart-failure cohort generator with HEARTLAND risk variables (rural distance, social support) that Synthea does not model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Vicky Muller Ferreira, MD", email = "vickymuller@heartlandprotocol.org" },
]
keywords = [
    "heart failure",
    "synthetic data",
    "HEARTLAND",
    "rural health",
    "risk score",
    "clinical research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
publish = [
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/vickymuller-md/heartland-synthetic"
Repository = "https://github.com/vickymuller-md/heartland-synthetic"
Protocol = "https://doi.org/10.5281/zenodo.18566403"

[tool.hatch.build.targets.wheel]
packages = ["src/heartland_synthetic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
